--- a/css/david-bohl.css
+++ b/css/david-bohl.css
@@ -1,4 +1,75 @@
-#bio {
+body {
+	background-color: gray;
+	margin: 0px;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 16px;
+}
 
-	font-size: 12pt;
+
+#header {
+	  /* float: left; */
+	  /*float: left; */
+	  /*background-color: aqua;*/
+	  /*background-color: #5c75be; */
+		background-color: rgb(173,	115,	77	);
+	  height: 100px;
+	  margin: 10px;
+	  padding: 5px;
+	  /*padding-left: 50px;*/
+	  text-align: center;
+
+	  /* border-radius: 15px; */
+	  
+}
+
+.main{
+	background-color: green;
+	margin: 10px;
+	padding: 5px;
+	border-radius: 5px;
+	
+}
+
+#picture {
+	 /*float: left;  */
+	/* display: inline; */ 
+	/* width: 600px; */
+	margin: 10px;
+	margin-left: 20px;
+	/* border: 25px solid navy; */
+	float: left;
+}
+
+#bio {
+	/* float: right; */
+	/*background-color: #bb99bb; */
+	/*background-color: rgb(133,113,124);*/
+	background-color: rgb(218,202,131);
+	margin: 10px;
+	padding: 5px;
+}
+
+#red{
+	background-color: rgb(248,66,62);
+	height: 100px;
+	margin: 10px;
+}
+#orange{
+	background-color: rgb(240,114,1);
+	height: 100px;
+	margin: 10px;
+}
+#yellow{
+	background-color: rgb(218,202,131);
+	height: 100px;
+	margin: 10px;
+}
+
+
+
+#icons {
+	float: left;
+	float: bottom;
+	margin: 10px;
+	
 }
