--- a/css/leila-valanejad.css
+++ b/css/leila-valanejad.css
@@ -1,1 +1,33 @@
+@import url(https://fonts.googleapis.com/css?family=Indie+Flower);
 
+body {
+    background-color: rgb(30,0,162);
+}
+
+h1{
+  font-family: Georgia, "New Times Roman", Serif;
+  font: normal 2em/3em 'Indie Flower', cursive;
+  color: rgb(90,252,250);
+  font-weight: bold;
+  line-height: 1.25em;
+  font-size: 2.5em;
+}
+  
+h2{
+  font-family: Georgia, "New Times Roman", Serif;
+  font: normal 2em/3em 'Indie Flower', cursive;
+  color: rgb(90,252,250);
+  font-weight: bold;
+  line-height: 1.25em;
+  font-size: 2em;
+}
+
+p {
+font-family: Georgia, "New Times Roman", Serif;
+font: normal 0.75em/1.5em 'Indie Flower', cursive;
+color: rgb(254,0,254);
+font-size: 0.75em;
+line-height: 1.5em;
+
+
+}
