--- a/css/jenny-shalai.css
+++ b/css/jenny-shalai.css
@@ -1,3 +1,69 @@
+/********** Fixes **********/
+
+* {
+  margin:0;
+  padding:0;
+  border:0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+}
+
+.clear {
+  clear: both;
+}
+
+/* Posititoning Classes */
+
+
+
+.wrapper {
+  width: 960px;
+  margin: 0 auto;
+  }
+
+.col-1 {
+  float: left;
+  width: 32%;
+}
+
+.col-2 {
+  float: left;
+  width: 66%;
+}
+
+[class*="col-"] {
+  margin-left: 2%;
+}
+
+.first {
+  margin-left: 0%;
+}
+
+.description {
+  float: left;
+  margin-top: 20px;
+}
+
+#logo {
+  float: left;
+  margin-top: 20px;
+}
+
 p {
   font-family: Georgia, Serif;
+  font-size: 1em;
+  line-height: 1.5em;
+  margin: 10px auto;
+
 }
+
