--- a/css/tamara-fultz.css
+++ b/css/tamara-fultz.css
@@ -29,7 +29,7 @@ header h1, h2 {
   font-family: 'Josefin Slab', serif;
 }
 
-#bio, footer {
+p, footer {
   font-family: 'Maven Pro', sans-serif;
 }
 
