added basic 2 column layout

--- a/css/david-bohl.css
+++ b/css/david-bohl.css
@@ -3,71 +3,54 @@ body {
 	margin: 0px;
 	font-family: Verdana, Geneva, sans-serif;
 	font-size: 16px;
-
 }
-
-
+/*--------classes---------------*/
+.wrapper{
+	
+	width: 960px;
+	margin: 0 auto;
+	padding: 0px;
+	
+}
+.colorbar{
+	height: 150px;
+	margin: 20px 0px 20px 0px;
+}
+/*----------IDs------------------*/
 #header {
-	  /* float: left; */
-	  /*float: left; */
-	  /*background-color: aqua;*/
-	  /*background-color: #5c75be; */
-		background-color: rgb(12,	131	,178		);
-	  height: 100px;
-	  margin: 10px;
-	  padding: 5px;
-	  /*padding-left: 50px;*/
-	  text-align: center;
-
-	  /* border-radius: 15px; */
-	  
-}
-
-
-
-#picture {
-	 /*float: left;  */
-	/* display: inline; */ 
-	/* width: 600px; */
-	margin: 10px;
-	margin-left: 20px;
-	/* border: 25px solid navy; */
-	float: left;
-}
-
-#bio {
-	/* float: right; */
-	/*background-color: #bb99bb; */
-	/*background-color: rgb(133,113,124);*/
-	background-color: rgb(218,202,131);
-	margin: 10px;
+	background-color: rgb(12,131,178);
+	height: 100px;
+	margin-bottom: 20px;
 	padding: 5px;
+	text-align: center;	  
 }
-
-#red{
-	background-color: rgb(248,66,62);
-	height: 100px;
-	margin: 10px;
+#picture {
+	margin: 20px 0px 20px 20px;
+	/*margin-top: 15px;
+	margin-left: 20px;*/
+	float: left;
+	/*box-shadow: 10px 5px 5px gray;*/
+	
 }
-#orange{
-	background-color: rgb(240,114,1);
-	height: 100px;
-	margin: 10px;
+#picture img{
+	height: 450px;
 }
-#yellow{
-	background-color: rgb(218,202,131);
-	height: 100px;
-	margin: 10px;
+#bio {
+	/*background-color: rgb(218,202,131);*/
+	background: rgb(171,210,191);
+	margin: 20px;
+	padding: 10px;
+	float: right;
+	width: 430px;
+	height: 430px;
+
 }
-
-
-
+#red{ background-color: rgb(248,66,62); }
+#orange{ background-color: rgb(240,114,1); }
+#yellow{ background-color: rgb(218,202,131);}
 #icons {
 	float: left;
 	float: bottom;
-	margin: 10px;
-	
+	margin: 20px;
 }
-#icons a{
-	text-decoration: none;
-}
+#icons a{ text-decoration: none; }
