--- a/css/jenny-shalai.css
+++ b/css/jenny-shalai.css
@@ -52,6 +52,7 @@
 .description {
   float: left;
   margin-top: 20px;
+  width: 32%;
 }
 
 #logo {
@@ -67,3 +68,55 @@ p {
 
 }
 
+@media only screen and (max-width: 1090px) {
+
+  .wrapper {
+  width: 90%;
+  margin: 0 auto;
+  }
+
+  .col-1, .col-2, .col-3 {
+    float: none;
+    display: block;
+    margin: 0 auto;
+
+  }
+
+   .description {
+    float: left;
+    margin-top: 20px auto;
+    width: 32%;
+  }
+
+  
+}
+
+
+@media only screen and (max-width: 800px) {
+
+  .description {
+    float: none;
+    padding: 20px 120px 20px 220px;
+    width: 100%;
+
+
+}
+
+@media only screen and (max-width: 450px) {
+
+  #logo {
+    width: 25px;
+  }
+
+  header h2, header p {
+    display: none;
+  }
+
+  .col-1 {
+    float: none;
+    width: 90%;
+    display: block;
+    margin: 0 auto;
+  
+  }
+}
