add columns and positioning

--- a/css/tamara-fultz.css
+++ b/css/tamara-fultz.css
@@ -6,7 +6,20 @@ body {
   padding: 2em;
 }
 
+/*/////// LAYOUT ////////*/
+
+#hobbies {
+  width: 50%;
+  float: right;
+}
+
+#bio {
+  width: 50%;
+  float: left;
+}
+
 figure {
+  display: block;
   float:right;
 }
 
@@ -21,6 +34,11 @@ figcaption {
   text-align: center;
 }
 
+#quotation {
+  width: 50%;
+  float: left;
+}
+
 header h1 {
   font-weight: bolder;
 }
@@ -29,8 +47,12 @@ header h1, h2 {
   font-family: 'Josefin Slab', serif;
 }
 
-p, footer {
+p, footer, pre.poem {
   font-family: 'Maven Pro', sans-serif;
+}
+
+div#quotation h3 {
+  font-family: 'Josefin Slab', serif;
 }
 
 a:link {
@@ -45,3 +67,40 @@ a:hover {
   color: rgb(99,28,11);
 }
 
+/*/////// SOCIAL ////////*/
+
+#social {
+  position: fixed;
+  top: 245px;
+  right: 20px;
+  width: 40px;
+  z-index: 2;
+}
+
+#social a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+a.twit {
+  background: url(../images/social-media-icons/Twitter.png) no-repeat;
+  background-position: 0 0; 
+}
+
+a.fbook {
+  background: url(../images/social-media-icons/Facebook.png) no-repeat;
+  background-position: 0 0; 
+}
+
+a.gplus {
+  background: url(../images/social-media-icons/Googleplus.png) no-repeat;
+  background-position: 0 0; 
+}
+
+footer {
+  clear: both;
+}
