--- a/css/david-bohl.css
+++ b/css/david-bohl.css
@@ -6,51 +6,116 @@ body {
 }
 /*--------classes---------------*/
 .wrapper{
-	
-	width: 960px;
+	width: 95%;
 	margin: 0 auto;
 	padding: 0px;
-	
 }
+.header-wrapper {
+    width: 100%;
+    position: relative;
+}
+
+
+.header-wrapper .name-container {
+    text-align: center;
+    position: absolute;
+    top: 0;
+    z-index: 99;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+.name-container h1 {
+    margin: 0;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+
 .colorbar{
-	height: 150px;
-	margin: 20px 0px 20px 0px;
+	padding: 7.5%;
+	margin: 2.5% 0% 2.5% 0%;
+	box-shadow: 5px 5px 5px #555;
+	
 }
 /*----------IDs------------------*/
-#header {
-	background-color: rgb(12,131,178);
-	height: 100px;
-	margin-bottom: 20px;
-	padding: 5px;
-	text-align: center;	  
-}
-#picture {
-	margin: 20px 0px 20px 20px;
-	/*margin-top: 15px;
-	margin-left: 20px;*/
-	float: left;
-	/*box-shadow: 10px 5px 5px gray;*/
-	
-}
-#picture img{
-	height: 450px;
-}
-#bio {
-	/*background-color: rgb(218,202,131);*/
-	background: rgb(171,210,191);
-	margin: 20px;
-	padding: 10px;
-	float: right;
-	width: 430px;
-	height: 430px;
 
+	#picture img{ width: 100%; }
+
+#bio-box{
+	background: rgb(171,210,191);
 }
+
+
+
+#blue{ background-color: rgb(12,131,178); }
 #red{ background-color: rgb(248,66,62); }
 #orange{ background-color: rgb(240,114,1); }
 #yellow{ background-color: rgb(218,202,131);}
-#icons {
-	float: left;
-	float: bottom;
-	margin: 20px;
-}
+
+
 #icons a{ text-decoration: none; }
+
+/*---------------MEDIA QUERIES---------------*/
+
+/*----------Larger Screen----------*/
+@media screen and (min-width: 741px){
+	#picture {
+		margin-top: 5%;
+		margin-left: 5%;
+		float: left;
+		width: 40%;
+	}
+
+
+	#bio-box {
+		margin: 5%;
+		float: right;
+		width: 20%;
+		padding: 20%;
+		box-sizing: border-box;
+		position: relative;
+
+	}
+
+
+	#bio-content {
+		position: absolute;
+		top: -15px;
+		left: 0;
+		padding: 15px;
+	}
+
+	#icons {
+		float: left;
+		float: bottom;
+		
+	}
+
+}
+
+/* ---------smaller screen-----------*/
+@media screen and (max-width: 740px){
+
+	#picture {
+		margin-top: 5%;
+		width: 40%;
+		float: right;
+  		position: relative;
+  		left: -30%; 
+  		text-align: left;
+	}
+
+	#bio-box{
+
+		clear: both;
+		float: left;
+		margin-top: 7.5%;
+		margin-bottom: 2.5%;
+		box-shadow: 5px 5px 5px #555;
+
+	}
+
+}
